--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,21 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box_apartement{
+
+  width: 250px;
+  border: 1px solid purple;
+  margin: 5%;
+  padding: 2%;
+}
