--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11213,8 +11213,109 @@ header .hamburger-menu ul a:focus {
 
 /* REGOLE DEL SLIDER -------------------------------------------------------- */
 
+.testo-slider {
+  height: 300px;
+  z-index: 800;
+  position: absolute;
+  left: 50%;
+  top: 70%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.app-flex {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.app-flex p {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  color: #e83e8c;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 0.4em;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.app-flex h1 {
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  font-weight: 900;
+  font-size: 72px;
+  margin-bottom: 8px;
+  line-height: 1.3;
+}
+
 .margin-slider {
   margin-top: 70px;
+}
+
+/* REGOLE DEL SEARCH --------------------------------------------------------- */
+
+.box-searchbar {
+  margin-top: 22px;
+}
+
+.box-searchbar .searchbar {
+  border: solid 1px #fff;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  padding: 0 10px;
+  width: 400px;
+  height: 50px;
+  border-radius: 10rem;
+  background: #fff;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
+}
+
+.box-searchbar .searchbar i {
+  color: #495057;
+  font-size: 18px;
+}
+
+.box-searchbar .searchbar input {
+  width: 200px;
+  height: 30px;
+  color: #495057;
+  border: none;
+  padding: 0 10px;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+}
+
+.box-searchbar .searchbar input:focus {
+  outline: none;
+}
+
+.box-searchbar .searchbar button {
+  color: #fff;
+  background-color: #1d3cf6;
+  border-color: #1131f6;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  border-radius: 10rem;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.525rem 0.75rem;
+  font-size: 0.8rem;
+  line-height: 1.6;
 }
 
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
@@ -11303,6 +11404,76 @@ footer .copyright .text-color {
 
   .hamburger-menu.active {
     display: block;
+  }
+
+  .testo-slider {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .testo-slider {
+    height: 300px;
+    z-index: 800;
+    position: absolute;
+    left: 50%;
+    top: 80%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+
+  .app-flex p {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    color: #e83e8c;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: "Poppins", sans-serif;
+    letter-spacing: 0.4em;
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+
+  .app-flex h1 {
+    font-family: "Poppins", sans-serif;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    font-weight: 900;
+    font-size: 50px;
+    margin-bottom: 8px;
+    line-height: 1.3;
+  }
+}
+
+@media (min-width: 1200px) {
+  .testo-slider {
+    height: 300px;
+    z-index: 800;
+    position: absolute;
+    left: 50%;
+    top: 60%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+
+  .app-flex p {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    color: #e83e8c;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: "Poppins", sans-serif;
+    letter-spacing: 0.4em;
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+
+  .app-flex h1 {
+    font-family: "Poppins", sans-serif;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    font-weight: 900;
+    font-size: 72px;
+    margin-bottom: 8px;
+    line-height: 1.3;
   }
 }
 
