--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -191,6 +191,28 @@ header {
   }
 }
 
+/* REGOLE DELLA READ MORE --------------------------------------------------- */
+
+.container {
+
+  .card_box {
+    padding-top: 100px;
+  }
+
+  h3 {
+    color: #4E66F8;
+    padding-top: 20px;
+  }
+
+  i {
+    color: #4E66F8;
+    font-size: 18px;
+    padding-top: 20px;
+    margin-right: 10px;
+  }
+}
+
+
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
 footer {
   .box-sb {
