--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11176,7 +11176,7 @@ header .hamburger-menu {
   width: 100%;
   height: 100%;
   min-width: 100vw;
-  min-height: 20vh;
+  min-height: 12vh;
   background: #fff;
 }
 
@@ -11259,6 +11259,10 @@ header .hamburger-menu ul a:focus {
   margin-top: 70px;
 }
 
+.margin-login {
+  margin-top: 140px;
+}
+
 /* REGOLE DEL SEARCH --------------------------------------------------------- */
 
 .box-searchbar {
@@ -11304,7 +11308,6 @@ header .hamburger-menu ul a:focus {
   color: #fff;
   background-color: #1d3cf6;
   border-color: #1131f6;
-  font-size: 16px;
   font-family: "Poppins", sans-serif;
   border-radius: 10rem;
   letter-spacing: 0.3em;
@@ -11316,6 +11319,10 @@ header .hamburger-menu ul a:focus {
   padding: 0.525rem 0.75rem;
   font-size: 0.8rem;
   line-height: 1.6;
+}
+
+.box-searchbar .searchbar button i {
+  display: none;
 }
 
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
@@ -11406,8 +11413,40 @@ footer .copyright .text-color {
     display: block;
   }
 
-  .testo-slider {
+  .testo-slider p,
+  .testo-slider h1 {
     display: none;
+  }
+
+  .box-searchbar {
+    margin-top: 130px;
+  }
+
+  .box-searchbar .searchbar {
+    width: 250px;
+    height: 40px;
+  }
+
+  .box-searchbar .searchbar .i {
+    display: none;
+  }
+
+  .box-searchbar .searchbar input {
+    width: 130px;
+    height: 18px;
+    font-size: 12px;
+  }
+
+  .box-searchbar .searchbar input:focus {
+    outline: none;
+  }
+
+  .box-searchbar .searchbar button {
+    color: #fff;
+    font-size: 0.4rem;
+    letter-spacing: none;
+    text-transform: uppercase;
+    font-weight: bold;
   }
 }
 
