--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -70,7 +70,7 @@ header {
     width: 100%;
     height: 100%;
     min-width: 100vw;
-    min-height: 20vh;
+    min-height: 12vh;
     background: #fff;
     ul {
       display: flex;
@@ -135,6 +135,9 @@ header {
 .margin-slider {
   margin-top: 70px;
 }
+.margin-login {
+  margin-top: 140px;
+}
 
 /* REGOLE DEL SEARCH --------------------------------------------------------- */
 .box-searchbar {
@@ -170,7 +173,6 @@ header {
       color: #fff;
       background-color: #1d3cf6;
       border-color: #1131f6;
-      font-size: 16px;
       font-family: 'Poppins', sans-serif;
       border-radius: 10rem;
       letter-spacing: .3em;
@@ -182,6 +184,9 @@ header {
       padding: .525rem .75rem;
       font-size: .8rem;
       line-height: 1.6;
+      i {
+        display: none;
+      }
     }
   }
 }
@@ -264,8 +269,33 @@ footer {
   .hamburger-menu.active {
       display: block;
   }
-  .testo-slider {
+  .testo-slider p, .testo-slider h1 {
     display: none;
+  }
+  .box-searchbar {
+    margin-top: 130px;
+    .searchbar {
+      width: 250px;
+      height: 40px;
+      .i {
+        display: none;
+      }
+      input {
+        width: 130px;
+        height: 18px;
+        font-size: 12px;
+      }
+      input:focus {
+        outline: none;
+      }
+      button {
+        color: #fff;
+        font-size: .4rem;
+        letter-spacing: none;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+    }
   }
 }
 
