--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -193,7 +193,7 @@ header {
 
 /* REGOLE DELLA READ MORE --------------------------------------------------- */
 
-.container {
+.apt_box {
 
   .card_box {
     padding-top: 100px;
