--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11111,6 +11111,23 @@ a.text-dark:focus {
   list-style: none;
 }
 
+.button_style {
+  color: #fff;
+  background-color: #1d3cf6;
+  border-color: #1131f6;
+  border-radius: 10rem;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.525rem 0.75rem;
+  font-size: 0.8rem;
+  line-height: 1.6;
+  margin: 20px 0px;
+}
+
 /* REGOLE HEADER ------------------------------------------------------------ */
 
 header {
@@ -11362,23 +11379,6 @@ header .hamburger-menu ul a:focus {
   margin-right: 10px;
 }
 
-.apt_box .button_style {
-  color: #fff;
-  background-color: #1d3cf6;
-  border-color: #1131f6;
-  border-radius: 10rem;
-  letter-spacing: 0.3em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
-  vertical-align: middle;
-  border: 1px solid transparent;
-  padding: 0.525rem 0.75rem;
-  font-size: 0.8rem;
-  line-height: 1.6;
-  margin: 20px 0px;
-}
-
 .apt_box .message-form {
   margin-top: 20px;
 }
@@ -11400,39 +11400,18 @@ header .hamburger-menu ul a:focus {
   padding-top: 100px;
 }
 
-.apt_create_box form .number_label {
-  margin-top: 30px;
-}
-
-.apt_create_box form .number_label input {
-  width: 70px;
-}
-
-.apt_create_box form .text_label {
-  margin: 30px 0;
-}
-
-.apt_create_box form .address_label {
-  margin: 30px 0;
-}
-
-.apt_create_box form .address_label input {
-  width: 200px;
-}
-
 .apt_create_box form input,
 .apt_create_box form textarea {
   border-radius: 10px;
   border: 1px solid #1131f6;
-  padding: 5px 10px;
-}
-
-.apt_create_box form label {
-  margin-top: 10px;
 }
 
 .apt_create_box form #label_img_apt_create {
   border: none;
+}
+
+.apt_create_box .immagini_create {
+  margin-bottom: 20px;
 }
 
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
