--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,28 @@
   list-style: none;
 }
 
+// stile buttons
+
+.button_style{
+
+  color:#fff;
+  background-color:#1d3cf6;
+  border-color: #1131f6;
+  border-radius: 10rem;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.525rem 0.75rem;
+  font-size: 0.8rem;
+  line-height: 1.6;
+  margin: 20px 0px;
+
+}
+
+
 /* REGOLE HEADER ------------------------------------------------------------ */
 header {
   padding: 0 20px;
@@ -233,25 +255,6 @@ header {
     }
   }
 
-  .button_style{
-
-    color:#fff;
-    background-color:#1d3cf6;
-    border-color: #1131f6;
-    border-radius: 10rem;
-    letter-spacing: 0.3em;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid transparent;
-    padding: 0.525rem 0.75rem;
-    font-size: 0.8rem;
-    line-height: 1.6;
-    margin: 20px 0px;
-
-  }
-
   .message-form{
     margin-top: 20px;
     form{
@@ -275,35 +278,17 @@ header {
 
   form{
 
-    .number_label{
-      margin-top: 30px;
-      input{
-        width: 70px;
-      }
-    }
-
-    .text_label{
-      margin: 30px 0;
-    }
-
-    .address_label{
-      margin: 30px 0;
-      input{
-        width: 200px;
-      }
-    }
-
     input, textarea{
       border-radius: 10px;
       border: 1px solid #1131f6;
-      padding: 5px 10px;
-    }
-    label{
-      margin-top:10px;
     }
     #label_img_apt_create{
       border: none;
     }
+  }
+
+  .immagini_create{
+    margin-bottom: 20px;
   }
 
 }
