--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -275,6 +275,16 @@ header {
 .apt_create_box{
 
   padding-top: 100px;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+
+  h3{
+    margin: 35px 0;
+    font-size: 40px;
+    font-weight: 800;
+    color:#4E66F8;
+    // padding-top: 20px;
+  }
 
   form{
 
