Aggiornata home page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,28 +15,6 @@
   list-style: none;
 }
 
-// stile buttons
-
-.button_style{
-
-  color:#fff;
-  background-color:#1d3cf6;
-  border-color: #1131f6;
-  border-radius: 10rem;
-  letter-spacing: 0.3em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
-  vertical-align: middle;
-  border: 1px solid transparent;
-  padding: 0.525rem 0.75rem;
-  font-size: 0.8rem;
-  line-height: 1.6;
-  margin: 20px 0px;
-
-}
-
-
 /* REGOLE HEADER ------------------------------------------------------------ */
 header {
   padding: 0 20px;
@@ -92,7 +70,7 @@ header {
     width: 100%;
     height: 100%;
     min-width: 100vw;
-    min-height: 12vh;
+    min-height: 14vh;
     background: #fff;
     ul {
       display: flex;
@@ -213,100 +191,113 @@ header {
   }
 }
 
+/* REGOLE DELLA HOME -------------------------------------------------------- */
+.corpo {
+  background-color: #f8f9fa;
+  .testo-evid {
+    margin: 100px 0 60px 0;
+    p {
+      text-shadow: 2px 2px 2px rgba(0,0,0,0.1);
+      color: #e83e8c;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-family: 'Poppins', sans-serif;
+      letter-spacing: .2em;
+      font-size: 16px;
+      margin-bottom: 8px;
+    }
+    h2 {
+      margin-bottom: .5rem;
+      font-family: "Poppins",sans-serif;
+      font-weight: 700;
+      line-height: 1.3;
+    }
+  }
+  .box_apartement {
+    box-shadow: 0 0 1rem rgba(0,0,0,0.15);
+    background-color: #fff;
+    border-radius: .4rem;
+    margin-bottom: 50px;
+    img {
+      max-width: 100%;
+      height: auto;
+      border-top-left-radius: calc(.4rem - 1px);
+      border-top-right-radius: calc(.4rem - 1px);
+    }
+    .anteprima {
+      padding: 1.25rem;
+      .city {
+        display: flex;
+        align-items: baseline;
+        i {
+          font-size: 20px;
+          color: #868e96;
+          margin-right: 5px;
+        }
+        p {
+          color: #868e96;
+          font-size: 14px;
+          letter-spacing: .2em;
+          font-size: .875rem;
+          text-transform: uppercase;
+          font-family: 'Poppins', sans-serif;
+          margin: 0;
+        }
+      }
+      .title {
+        display: flex;
+        align-items: flex-start;
+        width: auto;
+        height: 55px;
+        margin: 10px 0;
+        a {
+          color: #343a40;
+          h3 {
+            font-family: 'Poppins', sans-serif;
+            font-size: 1.25rem;
+            font-weight: 700;
+            line-height: 1.3;
+          }
+        }
+      }
+      .desc {
+        p {
+          font-size: .875rem;
+          font-family: 'Poppins', sans-serif;
+          color: #868e96;
+        }
+      }
+      .read-more {
+        a {
+          font-size: .875rem;
+          font-family: 'Poppins', sans-serif;
+          color: #4E66F8;
+        }
+      }
+    }
+  }
+}
+
 /* REGOLE DELLA READ MORE --------------------------------------------------- */
 
 .apt_box {
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-
-  #city_p {
-    font-size: 25px;
-    font-weight: 900;
-  }
-
-  i {
-    color: #4E66F8;
-  }
 
   .card_box {
     padding-top: 100px;
   }
 
   h3 {
-    font-size: 40px;
-    font-weight: 800;
     color: #4E66F8;
     padding-top: 20px;
   }
 
-  .info_apt_box{
-
-    ul {
-      li {
-        font-weight: 800;
-      }
-    }
-
-    i {
-      font-size: 18px;
-      padding-top: 20px;
-      margin-right: 10px;
-    }
+  i {
+    color: #4E66F8;
+    font-size: 18px;
+    padding-top: 20px;
+    margin-right: 10px;
   }
-
-  .message-form{
-    margin-top: 20px;
-    display: none;
-
-    form {
-      input, textarea{
-        border-radius: 10px;
-        border: 1px solid #1131f6;
-        padding: 5px 10px;
-      }
-
-      label {
-        margin-top:10px;
-      }
-    }
-  }
-
-  .message-form.active {
-    display: block;
-  }
-
 }
-
-/* REGOLE DELLA CREATE e EDIT--------------------------------------------------- */
-.apt_create_box, .apt_edit_box {
-  padding-top: 100px;
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-
-  h3{
-    margin: 35px 0;
-    font-size: 40px;
-    font-weight: 800;
-    color:#4E66F8;
-  }
-
-  form {
-    input, textarea {
-      border-radius: 10px;
-      border: 1px solid #1131f6;
-    }
-
-    .input_img_apt {
-      border: none;
-    }
-  }
-
-  .immagini_margin {
-    margin-bottom: 20px;
-  }
-
-}
-
 
 
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
@@ -355,21 +346,6 @@ footer {
       font-size: 14px;
     }
   }
-}
-
-
-// Inseriti all'inizio
-.container_apartements{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.box_apartement{
-
-  width: 250px;
-  border: 1px solid purple;
-  margin: 5%;
-  padding: 2%;
 }
 
 @media (max-width: 767px) {
@@ -480,3 +456,11 @@ footer {
     }
   }
 }
+
+
+
+.container_apartements {
+  display: flex;
+  flex-wrap: wrap;
+}
+
