--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11111,23 +11111,6 @@ a.text-dark:focus {
   list-style: none;
 }
 
-.button_style {
-  color: #fff;
-  background-color: #1d3cf6;
-  border-color: #1131f6;
-  border-radius: 10rem;
-  letter-spacing: 0.3em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
-  vertical-align: middle;
-  border: 1px solid transparent;
-  padding: 0.525rem 0.75rem;
-  font-size: 0.8rem;
-  line-height: 1.6;
-  margin: 20px 0px;
-}
-
 /* REGOLE HEADER ------------------------------------------------------------ */
 
 header {
@@ -11193,7 +11176,7 @@ header .hamburger-menu {
   width: 100%;
   height: 100%;
   min-width: 100vw;
-  min-height: 12vh;
+  min-height: 14vh;
   background: #fff;
 }
 
@@ -11342,96 +11325,124 @@ header .hamburger-menu ul a:focus {
   display: none;
 }
 
-/* REGOLE DELLA READ MORE --------------------------------------------------- */
+/* REGOLE DELLA HOME -------------------------------------------------------- */
 
-.apt_box {
+.corpo {
+  background-color: #f8f9fa;
+}
+
+.corpo .testo-evid {
+  margin: 100px 0 60px 0;
+}
+
+.corpo .testo-evid p {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  color: #e83e8c;
+  text-transform: uppercase;
+  font-weight: 700;
   font-family: "Poppins", sans-serif;
+  letter-spacing: 0.2em;
   font-size: 16px;
+  margin-bottom: 8px;
 }
 
-.apt_box #city_p {
-  font-size: 25px;
-  font-weight: 900;
+.corpo .testo-evid h2 {
+  margin-bottom: 0.5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  line-height: 1.3;
 }
 
-.apt_box i {
+.corpo .box_apartement {
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  border-radius: 0.4rem;
+  margin-bottom: 50px;
+}
+
+.corpo .box_apartement img {
+  max-width: 100%;
+  height: auto;
+  border-top-left-radius: calc(.4rem - 1px);
+  border-top-right-radius: calc(.4rem - 1px);
+}
+
+.corpo .box_apartement .anteprima {
+  padding: 1.25rem;
+}
+
+.corpo .box_apartement .anteprima .city {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: baseline;
+          align-items: baseline;
+}
+
+.corpo .box_apartement .anteprima .city i {
+  font-size: 20px;
+  color: #868e96;
+  margin-right: 5px;
+}
+
+.corpo .box_apartement .anteprima .city p {
+  color: #868e96;
+  font-size: 14px;
+  letter-spacing: 0.2em;
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+}
+
+.corpo .box_apartement .anteprima .title {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: start;
+          align-items: flex-start;
+  width: auto;
+  height: 55px;
+  margin: 10px 0;
+}
+
+.corpo .box_apartement .anteprima .title a {
+  color: #343a40;
+}
+
+.corpo .box_apartement .anteprima .title a h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.corpo .box_apartement .anteprima .desc p {
+  font-size: 0.875rem;
+  font-family: "Poppins", sans-serif;
+  color: #868e96;
+}
+
+.corpo .box_apartement .anteprima .read-more a {
+  font-size: 0.875rem;
+  font-family: "Poppins", sans-serif;
   color: #4E66F8;
 }
+
+/* REGOLE DELLA READ MORE --------------------------------------------------- */
 
 .apt_box .card_box {
   padding-top: 100px;
 }
 
 .apt_box h3 {
-  font-size: 40px;
-  font-weight: 800;
   color: #4E66F8;
   padding-top: 20px;
 }
 
-.apt_box .info_apt_box ul li {
-  font-weight: 800;
-}
-
-.apt_box .info_apt_box i {
+.apt_box i {
+  color: #4E66F8;
   font-size: 18px;
   padding-top: 20px;
   margin-right: 10px;
-}
-
-.apt_box .message-form {
-  margin-top: 20px;
-  display: none;
-}
-
-.apt_box .message-form form input,
-.apt_box .message-form form textarea {
-  border-radius: 10px;
-  border: 1px solid #1131f6;
-  padding: 5px 10px;
-}
-
-.apt_box .message-form form label {
-  margin-top: 10px;
-}
-
-.apt_box .message-form.active {
-  display: block;
-}
-
-/* REGOLE DELLA CREATE e EDIT--------------------------------------------------- */
-
-.apt_create_box,
-.apt_edit_box {
-  padding-top: 100px;
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-}
-
-.apt_create_box h3,
-.apt_edit_box h3 {
-  margin: 35px 0;
-  font-size: 40px;
-  font-weight: 800;
-  color: #4E66F8;
-}
-
-.apt_create_box form input,
-.apt_create_box form textarea,
-.apt_edit_box form input,
-.apt_edit_box form textarea {
-  border-radius: 10px;
-  border: 1px solid #1131f6;
-}
-
-.apt_create_box form .input_img_apt,
-.apt_edit_box form .input_img_apt {
-  border: none;
-}
-
-.apt_create_box .immagini_margin,
-.apt_edit_box .immagini_margin {
-  margin-bottom: 20px;
 }
 
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
@@ -11489,19 +11500,6 @@ footer .copyright .text-color {
   color: #dee2e6;
   padding-top: 25px;
   font-size: 14px;
-}
-
-.container_apartements {
-  display: -webkit-box;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.box_apartement {
-  width: 250px;
-  border: 1px solid purple;
-  margin: 5%;
-  padding: 2%;
 }
 
 @media (max-width: 767px) {
@@ -11623,5 +11621,11 @@ footer .copyright .text-color {
     margin-bottom: 8px;
     line-height: 1.3;
   }
+}
+
+.container_apartements {
+  display: -webkit-box;
+  display: flex;
+  flex-wrap: wrap;
 }
 
