--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11111,6 +11111,23 @@ a.text-dark:focus {
   list-style: none;
 }
 
+.button_style {
+  color: #fff;
+  background-color: #1d3cf6;
+  border-color: #1131f6;
+  border-radius: 10rem;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.525rem 0.75rem;
+  font-size: 0.8rem;
+  line-height: 1.6;
+  margin: 20px 0px;
+}
+
 /* REGOLE HEADER ------------------------------------------------------------ */
 
 header {
@@ -11429,20 +11446,94 @@ header .hamburger-menu ul a:focus {
 
 /* REGOLE DELLA READ MORE --------------------------------------------------- */
 
+.apt_box {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+}
+
+.apt_box #city_p {
+  font-size: 25px;
+  font-weight: 900;
+}
+
+.apt_box i {
+  color: #4E66F8;
+}
+
 .apt_box .card_box {
   padding-top: 100px;
 }
 
 .apt_box h3 {
+  font-size: 40px;
+  font-weight: 800;
   color: #4E66F8;
   padding-top: 20px;
 }
 
-.apt_box i {
-  color: #4E66F8;
+.apt_box .info_apt_box ul li {
+  font-weight: 800;
+}
+
+.apt_box .info_apt_box i {
   font-size: 18px;
   padding-top: 20px;
   margin-right: 10px;
+}
+
+.apt_box .message-form {
+  margin-top: 20px;
+  display: none;
+}
+
+.apt_box .message-form form input,
+.apt_box .message-form form textarea {
+  border-radius: 10px;
+  border: 1px solid #1131f6;
+  padding: 5px 10px;
+}
+
+.apt_box .message-form form label {
+  margin-top: 10px;
+}
+
+.apt_box .message-form.active {
+  display: block;
+}
+
+/* REGOLE DELLA CREATE e EDIT--------------------------------------------------- */
+
+.apt_create_box,
+.apt_edit_box {
+  padding-top: 100px;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+}
+
+.apt_create_box h3,
+.apt_edit_box h3 {
+  margin: 35px 0;
+  font-size: 40px;
+  font-weight: 800;
+  color: #4E66F8;
+}
+
+.apt_create_box form input,
+.apt_create_box form textarea,
+.apt_edit_box form input,
+.apt_edit_box form textarea {
+  border-radius: 10px;
+  border: 1px solid #1131f6;
+}
+
+.apt_create_box form .input_img_apt,
+.apt_edit_box form .input_img_apt {
+  border: none;
+}
+
+.apt_create_box .immagini_margin,
+.apt_edit_box .immagini_margin {
+  margin-bottom: 20px;
 }
 
 /* REGOLE DEL FOOTER -------------------------------------------------------- */
