Completato front-end login e register

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11128,6 +11128,14 @@ a.text-dark:focus {
   margin: 20px 0px;
 }
 
+.img-log {
+  background-image: url(/images/room.jpeg?f8a398d2e0792bf2ee978d7acfb4c593);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+}
+
 /* REGOLE HEADER ------------------------------------------------------------ */
 
 header {
@@ -11679,6 +11687,18 @@ footer .copyright .text-color {
     margin-bottom: 8px;
     line-height: 1.3;
   }
+
+  .img-log {
+    height: 100vh;
+    width: 100vw;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .img-log {
+    height: 100vh;
+    width: 100vw;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -11711,6 +11731,11 @@ footer .copyright .text-color {
     font-size: 72px;
     margin-bottom: 8px;
     line-height: 1.3;
+  }
+
+  .img-log {
+    height: 100vh;
+    width: 100vw;
   }
 }
 
