--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,14 @@
   margin: 20px 0px;
 }
 
+.img-log {
+  background-image: url("img/room.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+}
+
 /* REGOLE HEADER ------------------------------------------------------------ */
 header {
   padding: 0 20px;
@@ -513,6 +521,17 @@ footer {
       line-height: 1.3;
     }
   }
+  .img-log {
+    height: 100vh;
+    width: 100vw;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .img-log {
+    height: 100vh;
+    width: 100vw;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -544,6 +563,10 @@ footer {
       margin-bottom: 8px;
       line-height: 1.3;
     }
+  }
+  .img-log {
+    height: 100vh;
+    width: 100vw;
   }
 }
 
