--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -299,6 +299,17 @@ header {
           color: #4E66F8;
         }
       }
+      .action {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        a {
+          font-size: .875rem;
+          font-family: 'Poppins', sans-serif;
+          color: #4E66F8;
+          margin-right: 20px;
+        }
+      }
     }
   }
 }
